--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -460,6 +460,28 @@ header {
             margin: 20px auto;
             opacity: 0.7;
         }
+    }.slick-dots {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        li {
+            margin: 0 9px;
+            padding: 3px;
+            button {
+                font-size: 0;
+                width: 7px;
+                height: 7px;
+                border-radius: 50%;
+                background: #dbd9d9;
+                border: none;
+                cursor: pointer;
+            }
+        }
+        .slick-active {
+            button {
+                background: #999;
+            }
+        }
     }
     .reviews-wrap {
         padding: 90px 0 20px;
