--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -169,7 +169,7 @@ img {
     }
 }
 .top {
-    background: rgb(1, 111, 189);
+    background: #016fbd;
     .top-wrap {
         display: flex;
         justify-content: space-between;
