--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -873,9 +873,21 @@ footer p {
 }
 
 .mobile-menu {
-  opacity: 0;
-  visibility: hidden;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  transition: 0.3s ease all;
+}
+.mobile-menu.active {
+  opacity: 1;
+  visibility: visible;
+}
+.mobile-menu .mobile-menu__content {
+  position: absolute;
+  top: 0;
+  left: 0;
 }/*# sourceMappingURL=style.css.map */
