--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -764,9 +764,23 @@ section {
     }
 }
 .mobile-menu {
-    opacity: 0;
-    visibility: hidden;
+    // opacity: 0;
+    // visibility: hidden;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, .5);
+    z-index: 9999;
+    transition: .3s ease all;
+    &.active {
+        opacity: 1;
+        visibility: visible;
+    }
+    .mobile-menu__content {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
