--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -708,13 +708,12 @@ header .navbar ul li a {
 }
 #contacts .contacts-wrap .contacts-wrap__item .item {
   display: flex;
-  align-items: center;
   margin: 10px 0;
 }
 #contacts .contacts-wrap .contacts-wrap__item .item span {
   font-weight: 300;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 28px;
   margin-left: 12px;
 }
 #contacts .contacts-wrap .contacts-wrap__item h3 {
@@ -873,12 +872,14 @@ footer p {
 }
 
 .mobile-menu {
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
   z-index: 9999;
   transition: 0.3s ease all;
 }
@@ -889,5 +890,27 @@ footer p {
 .mobile-menu .mobile-menu__content {
   position: absolute;
   top: 0;
+  left: -120%;
+  width: 70%;
+  height: 100%;
+  background: #fff;
+  padding: 20px;
+  transition: 0.3s ease all;
+}
+.mobile-menu .mobile-menu__content.active {
   left: 0;
+}
+.mobile-menu .mobile-menu__content ul {
+  margin-top: 140px;
+}
+.mobile-menu .mobile-menu__content ul li {
+  margin: 30px 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.mobile-menu .mobile-menu__content ul li a {
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 21px;
 }/*# sourceMappingURL=style.css.map */
