--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -618,10 +618,9 @@ header {
             }
             .item {
                 display: flex;
-                align-items: center;
                 margin: 10px 0;
                 span {
-                    @include _txtStyle(300, 16px, 21px);
+                    @include _txtStyle(300, 16px, 28px);
                     margin-left: 12px;
                 }
             }
@@ -764,14 +763,14 @@ section {
     }
 }
 .mobile-menu {
-    // opacity: 0;
-    // visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .4);
     z-index: 9999;
     transition: .3s ease all;
     &.active {
@@ -781,6 +780,24 @@ section {
     .mobile-menu__content {
         position: absolute;
         top: 0;
-        left: 0;
+        left: -120%;
+        width: 70%;
+        height: 100%;
+        background: #fff;
+        padding: 20px;
+        transition: .3s ease all;
+        &.active {
+            left: 0;
+        }
+        ul {
+            margin-top: 140px;
+            li {
+                margin: 30px 0;
+                width: fit-content;
+                a {
+                    @include _txtStyle(700, 21px, 21px);
+                }
+            }
+        }
     }
 }
